# mcr-py

./: .gitignore  Cargo.toml  README.md  clean-python-env.sh  cologne_bbox.ipynb  debug_notes.md  environment.yaml  footpaths.ipynb  main.ipynb  mcr_py.pyi  pyproject.toml  results.ipynb  test.py  watch.sh
.github/workflows/: python-package-conda.yml
notebooks/: area.ipynb  bicycle_locations.ipynb  cologne_bbox.ipynb  debug.ipynb  footpaths.ipynb  graph.ipynb  gtfs.ipynb  h3.ipynb  land_use.ipynb  mcr.ipynb  mcr5.ipynb  mcr5_input.ipynb  mcr_results.ipynb  mcraptor.ipynb  results.ipynb  to_mlc_csv.ipynb
src/: conftest.py  debug.py  lib.rs  main.py  mlc_adapter.rs  test.py
src/cmd/: build.py  clean.py
src/command/: build.py  clean.py  footpaths.py  gtfs.py  mcr.py  mcraptor.py  mcraptor_test.py  osm.py  raptor.py  raptor_test.py  step_config.py
src/command/gtfs/: gtfs.py  read.py
src/package/: build.py  cache.py  clean.py  console.py  footpaths.py  geometa.py  gtfs.py  h3.py  key.py  logger.py  mcr.py  mcraptor.py  osm.py  output.py  raptor.py  storage.py  strtime.py  strtime_test.py  tracer.py
src/package/graph/: fast_path.py  igraph.py
src/package/gtfs/: archive.py  catalog.py  clean.py  clean_test.py  crop.py  dtypes.py  fixtures.py  read.py
src/package/mcr/: bag.py  config.py  data.py  label.py  label_test.py  mcr.py  output.py  path.py  path_test.py
src/package/mcr5/: h3.py  h3_osm_interaction.py  labels.py  mcr5.py  osm.py
src/pkg/: clean.py  key.py
src/rs/: graph_cache.rs  label.rs  mlc_adapter.rs  mod.rs
src/testdata/: footpaths.pkl
(+30 files in other folders)
