[package]
name = "mcr-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mcr_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pyo3-polars = { version = "0.4.1", features = ["lazy"] }
polars-lazy =  "*"
polars = { version = "0.30.0", features = ["fmt"] }
polars-core = { version = "*" }
bimap = "0.6.3"
fast_paths = { git = "https://github.com/easbar/fast_paths.git", rev = "6d236d1be5f341071c65ee36c540279986cf7231" }
rayon = "1.7.0"
